Manual Refactor for enum changes